--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             // 这里可以添加实际的登录验证逻辑
             if (username && password) {
                 // 登录成功后跳转到主页
-                window.location.href = '1.html';
+                window.location.href = 'test.html';
             }
             return false;
         }
